k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: default
  labels:
    app: python-app
spec:
  selector:
    matchLabels:
      app: python-app
  replicas: 1
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: davikt/python-app:v1
          ports:
            - containerPort: 5000
              name: python-app
      restartPolicy: Always
