k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: default
spec:
  selector:
    app: python-app
  ports:
    - name: python-app
      protocol: TCP
      port: 4400
      targetPort: 5000
